# touch-paint

./: Makefile  README.md  timelink-touchwin-paint.spec
src/: CMakeLists.txt  main.cpp  timelink-touchwin-paint.spec
